Update portfolio with project links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- Project 1 -->
       <div class="project-tile" style="background-color: #ff6f61;"> <!-- Project tile with custom background -->
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page" target="_blank"> <!-- Link to project -->
+        <a href="Projects/Product-Landing-Page/index.html" target="_blank"> <!-- Link to project -->
           <h3>Product Landing Page</h3> <!-- Project title -->
           <p>Build a responsive product landing page that showcases a product or service.</p> <!-- Project description -->
         </a>
@@ -46,7 +46,7 @@
 
       <!-- Project 2 -->
       <div class="project-tile" style="background-color: #6b5b95;"> <!-- Second project tile with different background -->
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page" target="_blank">
+        <a href="Projects/Technical-Documentation-Page/index.html" target="_blank">
           <h3>Technical Documentation Page</h3>
           <p>Create a technical documentation page that explains a concept or technology.</p>
         </a>
@@ -54,7 +54,7 @@
 
       <!-- Project 3 -->
       <div class="project-tile" style="background-color: #ffb347;"> <!-- Third project tile with different background -->
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form" target="_blank">
+        <a href="Projects/Survey-Form/index.html" target="_blank">
           <h3>Survey Form</h3>
           <p>Design a survey form for collecting information in a structured format.</p>
         </a>
